--- a/talks.html
+++ b/talks.html
@@ -54,7 +54,7 @@
                     <ul>
                         <li>
                             <strong>Chen Zhao</strong>, Xintao Wu.<br>
-                            The Annual AAAI Conference on Artificial Intelligence (AAAI'25), Philadelphia, Pennsylvania, USA, 2025.
+                            The Annual AAAI Conference on Artificial Intelligence (AAAI'25), Philadelphia, PA, USA, 2025.
                         </li>
                         <li>
                             <strong>Chen Zhao</strong>, Xintao Wu.<br>
@@ -70,6 +70,7 @@
             <ul>
                 <li>Advances in Fairness and Robustness in Machine Learning Under Distribution Shifts.
                     <ul>
+                        <li>Department of Computer Science, Brigham Young University (February 2025, Provo, UT, USA, Host: Porter Jenkins)</li>
                         <li>Graduate Seminar, Baylor University (September 2024, Waco, TX, USA, Host: Eunjee Song)</li>
                         <li>Equifax Inc. (July 2024, Online, Host: Joseph White)</li>
                         <li>Data Science Seminar, Baylor University (October 2023, Waco, TX, USA, Host: Henry Han)</li>
