--- a/talks.html
+++ b/talks.html
@@ -71,6 +71,7 @@
                 <li>Advances in Fairness and Robustness in Machine Learning Under Distribution Shifts.
                     <ul>
                         <li>Department of Computer Science, Brigham Young University (February 2025, Provo, UT, USA, Host: Porter Jenkins)</li>
+                        <li>AI TIME (October 2024, Online, Host: Qing Qi)</li>
                         <li>Graduate Seminar, Baylor University (September 2024, Waco, TX, USA, Host: Eunjee Song)</li>
                         <li>Equifax Inc. (July 2024, Online, Host: Joseph White)</li>
                         <li>Data Science Seminar, Baylor University (October 2023, Waco, TX, USA, Host: Henry Han)</li>
