--- a/publications.html
+++ b/publications.html
@@ -114,19 +114,24 @@
             <p><strong>Conference Papers</strong></p>
                 <ol>
                     <li>
+                        <strong>[AAAI'25]</strong> Multi-View Unsupervised Column Subset Selection via Combinatorial Search. <br>
+                        Guihong Wan, Ninghui Hao, Crystal Maung, Haim Schweitzer, <strong>Chen Zhao</strong>, Kun-Hsing Yu, Yevgeniy Semenov <br>
+                        <em>In Proceedings of the AAAI Conference on Artificial Intelligence</em>, 2025
+                    </li>
+                    <li>
                         <strong>[BigData'24]</strong> MADOD: Generalizing OOD Detection to Unseen Domains via G-Invariance Meta-Learning. <br>
                         <u>Haoliang Wang</u>, <strong>Chen Zhao</strong>, Feng Chen <br>
-                        <em>In Proceedings of the IEEE International Conference on Big Data</em> (<strong>regular paper</strong>), 2024
+                        <em>In Proceedings of the IEEE International Conference on Big Data</em>, 2024
                     </li>
                     <li>
                         <strong>[BigData'24]</strong> FEED: Fairness-Enhanced Meta-Learning for Domain Generalization. <br>
                         <u>Kai Jiang</u>, <strong>Chen Zhao</strong>, Haoliang Wang, Feng Chen <br>
-                        <em>In Proceedings of the IEEE International Conference on Big Data</em> (<strong>regular paper</strong>), 2024
+                        <em>In Proceedings of the IEEE International Conference on Big Data</em>, 2024
                     </li>
                     <li>
                 		<strong>[CIKM'24]</strong> Learning Fair Invariant Representations under Covariate and Correlation Shifts Simultaneously. </br>
                 		<u>Dong Li</u>, <strong>Chen Zhao</strong>, Minglai Shao, Wenjun Wang. <br/>
-                		<em>In Proceedings of the ACM International Conference on Information and Knowledge Management</em> (<strong>full paper</strong>), 2024
+                		<em>In Proceedings of the ACM International Conference on Information and Knowledge Management</em>, 2024
                 	</li>
                 	<li>
                 		<strong>[ECAI'24]</strong> Causal Diffusion Autoencoders: Toward Counterfactual Generation via Diffusion Probabilistic Models. </br>
@@ -136,7 +141,7 @@
                 	<li>
                 		<strong>[KDD'24]</strong> Algorithmic Fairness Generalization under Covariate and Dependence Shifts Simultaneously. </br>
                 		<strong>Chen Zhao</strong><sup>*</sup>, Kai Jiang<sup>*</sup>, Xintao Wu, Haoliang Wang, Latifur Khan, Christan Earl Grant, Feng Chen. <br/>
-                		<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>research track</strong>), 2024
+                		<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em>, 2024
                 	</li>
                 	<li>
                 		<strong>[IJCAI'24]</strong> Supervised Algorithmic Fairness in Distribution Shifts: A Survey. </br>
@@ -156,17 +161,17 @@
                     <li>
                 		<strong>[CIKM'23]</strong> Adaptation Speed Analysis for Fairness-aware Causal Models. </br>
                 		<u>Yujie Lin</u>, <strong>Chen Zhao</strong>, Minglai Shao, Xujiang Zhao, Haifeng Chen.<br/>
-                		<em>In Proceedings of the ACM International Conference on Information and Knowledge Management</em> (<strong>full paper</strong>), 2023
+                		<em>In Proceedings of the ACM International Conference on Information and Knowledge Management</em>, 2023
                 	</li>
                 	<li>
                 		<strong>[CIKM'23]</strong> Contrastive Representation Learning Based on Multiple Node-centered Subgraphs. </br>
                 		Dong Li, Wenjun Wang, Minglai Shao, <strong>Chen Zhao</strong>.<br/>
-                		<em>In Proceedings of the ACM International Conference on Information and Knowledge Management</em> (<strong>full paper</strong>), 2023
+                		<em>In Proceedings of the ACM International Conference on Information and Knowledge Management</em>, 2023
                 	</li>
                 	<li>
                 		<strong>[KDD'23]</strong> Towards Fair Disentangled Online Learning for Changing Environments. </br>
                 		<strong>Chen Zhao</strong><sup>*</sup>, Feng Mi<sup>*</sup>, Xintao Wu, Kai Jiang, Latifur Khan, Christan Earl Grant, Feng Chen.<br/>
-                		<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>research track</strong>), 2023
+                		<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em>, 2023
                 	</li>
                     <li>
                 		<strong>[CVPR'23]</strong> Open Set Action Recognition via Multi-Label Evidential Learning. </br>
@@ -181,7 +186,7 @@
                     <li>
                 		<strong>[KDD'22]</strong> Adaptive Fairness-Aware Online Meta-Learning for Changing Environments. </br>
                 		<strong>Chen Zhao</strong><sup>*</sup>, Feng Mi<sup>*</sup>, Xintao Wu, Kai Jiang, Latifur Khan, Feng Chen. <br/>
-                		<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>research track</strong>), 2022
+                		<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em>, 2022
                 	</li>
                     <li>
                 		<strong>[PAKDD'22]</strong> Layer Adaptive Deep Neural Networks for Out-of-distribution Detection. </br>
@@ -196,7 +201,7 @@
                     <li>
                 		<strong>[KDD'21]</strong> Fairness-Aware Online Meta-learning. </br>
                 		<strong>Chen Zhao</strong>, Feng Chen, Bhavani Thuraisingham. <br/>
-                		<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>research track</strong>), 2021
+                		<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em>, 2021
                 	</li>
                 	<li>
                 		<strong>[ICBC'21]</strong> VSCL: Automating Vulnerability Detection in Smart Contracts with Deep Learning. </br>
@@ -211,7 +216,7 @@
                     <li>
                 		<strong>[ICDM'20]</strong> A Primal-Dual Subgradient Approach for Fair Meta Learning. </br>
                 		<strong>Chen Zhao</strong>, Feng Chen, Zhuoyi Wang, Latifur Khan. <br/>
-                		<em>In Proceedings of the IEEE International Conference on Data Mining</em> (<strong>full paper</strong>), 2020
+                		<em>In Proceedings of the IEEE International Conference on Data Mining</em>, 2020
                 	</li>
                 	<li>
                 		<strong>[ICKG'20]</strong> Fair Meta-Learning for Few-Shot Classification. </br>
@@ -226,7 +231,7 @@
                     <li>
                 		<strong>[ICDM'19]</strong> Rank-Based Multi-task Learning for Fair Regression. </br>
                 		<strong>Chen Zhao</strong>, Feng Chen. <br/>
-                		<em>In Proceedings of the IEEE International Conference on Data Mining</em> (<strong>full paper</strong>), 2019
+                		<em>In Proceedings of the IEEE International Conference on Data Mining</em>, 2019
                 	</li>
                 </ol>
 
