--- a/publications.html
+++ b/publications.html
@@ -112,6 +112,7 @@
 
 <!-- --------------------------------------------------------------------------------------------------------------------- -->
             <p><strong>Conference Papers</strong></p>
+            KDD(4), IJCAI(2), AAAI(2), CVPR(1), WWW(1), CIKM(3), ICDM(2), ECAI(1), ICASSP(1), IEEE BigData(2), PAKDD(1), ICBC(1), ICKG(2), IGARSS(1)
                 <ol>
                     <li>
                         <strong>[AAAI'25]</strong> Multi-View Unsupervised Column Subset Selection via Combinatorial Search. <br>
