--- a/publications.html
+++ b/publications.html
@@ -112,7 +112,23 @@
 
 <!-- --------------------------------------------------------------------------------------------------------------------- -->
             <p><strong>Conference Papers</strong></p>
-            KDD(4), IJCAI(2), AAAI(2), CVPR(1), WWW(1), CIKM(3), ICDM(2), ECAI(1), ICASSP(1), IEEE BigData(2), PAKDD(1), ICBC(1), ICKG(2), IGARSS(1)
+
+            <p style="text-align:justify;background-color:#bebbbf">
+                <strong>KDD</strong>(4), 
+                <strong>IJCAI</strong>(2), 
+                <strong>AAAI</strong>(2),
+                <strong>CVPR</strong>(1), 
+                <strong>WWW</strong>(1), 
+                <strong>CIKM</strong>(3), 
+                <strong>ICDM</strong>(2), 
+                <strong>ECAI</strong>(1), 
+                <strong>ICASSP</strong>(1), 
+                <strong>IEEE BigData</strong>(2), 
+                <strong>PAKDD</strong>(1), 
+                <strong>ICBC</strong>(1), 
+                <strong>ICKG</strong>(2), 
+                <strong>IGARSS</strong>(1)
+            </p>
                 <ol>
                     <li>
                         <strong>[AAAI'25]</strong> Multi-View Unsupervised Column Subset Selection via Combinatorial Search. <br>
