--- a/publications.html
+++ b/publications.html
@@ -113,7 +113,7 @@
 <!-- --------------------------------------------------------------------------------------------------------------------- -->
             <p><strong>Conference Papers</strong></p>
 
-            <p style="text-align:justify;background-color:#bebbbf">
+            <p style="text-align:justify;background-color:#dbd9db">
                 <strong>KDD</strong>(4), 
                 <strong>IJCAI</strong>(2), 
                 <strong>AAAI</strong>(2),
@@ -129,6 +129,7 @@
                 <strong>ICKG</strong>(2), 
                 <strong>IGARSS</strong>(1)
             </p>
+            
                 <ol>
                     <li>
                         <strong>[AAAI'25]</strong> Multi-View Unsupervised Column Subset Selection via Combinatorial Search. <br>
