--- a/services.html
+++ b/services.html
@@ -170,6 +170,7 @@
 				<li>ACM Transactions on Knowledge Discovery from Data (TKDD)</li>
 				<li>Journal of Frontiers in Big Data</li>
 				<li>Journal of Advances in Artificial Intelligence and Machine Learning</li>
+				<li>Journal of Open Innovation: Technology, Market, and Complexity</li>
 			</ul>
 		    <li>2023:
 			<ul>
