--- a/publications.html
+++ b/publications.html
@@ -74,11 +74,6 @@
                 		<em>ArXiv preprint, 2309.10209</em>
                 	</li>
                     <li>
-                		An Automated Vulnerability Detection Framework for Smart Contracts. </br>
-                		Feng Mi, <strong>Chen Zhao</strong>, Zhuoyi Wang, Sadaf MD Halim, Xiaodi Li, Zhouxiang Wu, Latifur Khan, Bhavani Thuraisingham. <br/>
-                		<em>ArXiv preprint, 2301.08824</em>
-                	</li>
-                    <li>
                 		PDFM: A Primal-Dual Fairness-Aware Framework for Meta-learning. </br>
                 		<strong>Chen Zhao</strong>, Feng Chen, Zhuoyi Wang, Latifur Khan. <br/>
                 		<em>ArXiv preprint, 2009.12675v2</em>
@@ -88,6 +83,11 @@
 <!-- --------------------------------------------------------------------------------------------------------------------- -->
             <p><strong>Journal Papers</strong></p>
                 <ol>
+                    <li>
+                        <strong>[DLT]</strong> An Automated Vulnerability Detection Framework for Smart Contracts. <br>
+                		Feng Mi, <strong>Chen Zhao</strong>, Zhuoyi Wang, Sadaf MD Halim, Xiaodi Li, Zhouxiang Wu, Latifur Khan, Bhavani Thuraisingham. <br/>
+                        <em>The ACM Distributed Ledger Technologies: Research and Practice</em>, 2024
+                    </li>
                     <li>
                         <strong>[Frontier in Big Data]</strong> Efficient Out-of-Distribution Detection via Layer-Adaptive Scoring and Early Stopping. <br>
                         <u>Haoliang Wang</u>, <strong>Chen Zhao</strong>, Feng Chen. <br>
