--- a/services.html
+++ b/services.html
@@ -225,6 +225,10 @@
 	    <ul>
 		    <li>Judge for the Outstanding Graduate Student Research Award, Baylor University, 2023 - 2024 </li>
 		    <li>Engagement Committee, Department of Computer Science, Baylor University, since 2023 </li>
+			    <ul>
+				  <li>Engagement Committee Chair, since 2024</li>  
+				  <li>Engagement Committee Member, 2023-2024</li>  
+			    </ul>
 		    <li>Graduate Committee, Department of Computer Science, Baylor University, since 2023 </li>
 	    </ul>
 		
