--- a/students.html
+++ b/students.html
@@ -106,6 +106,15 @@
                             Ph.D. Student (09/2024 - )
                         </p>
                     </div>
+
+                    <div class="image-wrapper" style="text-align: center">
+                        <img src="./files/student_imgs/dong_li.png" alt="Dong Li" width="200"> 
+                        <p>
+                            <a href="https://charliezhaoyinpeng.github.io/homepage/students.html">Dong Li</a> <br>
+                            Ph.D. Student (01/2025 - )
+                        </p>
+                    </div>
+
                     
                 </div>
             </div>    
