--- a/publications.html
+++ b/publications.html
@@ -54,6 +54,11 @@
             <p><strong>Preprints</strong></p>
                 <ol>
                     <li>
+                        Fair In-Context Learning via Latent Concept Variables. <br>
+                        Karuna Bhaila, Minh-Hao Van, Kennedy Edemacu, <strong>Chen Zhao</strong>, Feng Chen, Xintao Wu. <br>
+                        <em>ArXiv preprint, 2411.02671, 2024.</em>
+                    </li>
+                    <li>
                         GDDA: Semantic OOD Detection on Graphs under Covariate Shift via Score-Based Diffusion Models. <br>
                         <u>Zhixia He</u>, <strong>Chen Zhao</strong>, Minglai Shao, Yujie Lin, Dong Li, Qin Tian. <br>
                         <em>ArXiv preprint, 2410.17526</em>
