--- a/publications.html
+++ b/publications.html
@@ -56,7 +56,7 @@
                     <li>
                         Fair In-Context Learning via Latent Concept Variables. <br>
                         Karuna Bhaila, Minh-Hao Van, Kennedy Edemacu, <strong>Chen Zhao</strong>, Feng Chen, Xintao Wu. <br>
-                        <em>ArXiv preprint, 2411.02671, 2024.</em>
+                        <em>ArXiv preprint, 2411.02671</em>
                     </li>
                     <li>
                         GDDA: Semantic OOD Detection on Graphs under Covariate Shift via Score-Based Diffusion Models. <br>
