--- a/publications.html
+++ b/publications.html
@@ -128,7 +128,7 @@
                 <strong>ICDM</strong>(2), 
                 <strong>ECAI</strong>(1), 
                 <strong>ICASSP</strong>(1), 
-                <strong>IEEE BigData</strong>(2), 
+                <strong>IEEE BigData</strong>(3), 
                 <strong>PAKDD</strong>(1), 
                 <strong>ICBC</strong>(1), 
                 <strong>ICKG</strong>(2), 
@@ -140,6 +140,11 @@
                         <strong>[AAAI'25]</strong> Multi-View Unsupervised Column Subset Selection via Combinatorial Search. <br>
                         Guihong Wan, Ninghui Hao, Crystal Maung, Haim Schweitzer, <strong>Chen Zhao</strong>, Kun-Hsing Yu, Yevgeniy Semenov <br>
                         <em>In Proceedings of the AAAI Conference on Artificial Intelligence</em>, 2025
+                    </li>
+                    <li>
+                        <strong>[BigData'24]</strong> Feature-Space Semantic Invariance: Enhanced OOD Detection for Open-Set Domain Generalization. <br>
+                        <u>Haoliang Wang</u>, <strong>Chen Zhao</strong>, Feng Chen <br>
+                        <em>In Proceedings of the IEEE International Conference on Big Data</em>, 2024
                     </li>
                     <li>
                         <strong>[BigData'24]</strong> MADOD: Generalizing OOD Detection to Unseen Domains via G-Invariance Meta-Learning. <br>
