--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		<li>[10/2024] One paper is accepted by AAAI 2025 (student abstract). </li>
 		<li>[10/2024] I am invited to give a talk by the Department of Computer Science at Brigham Young University. </li>
 		<li>[10/2024] A tutorial is accepted by AAAI 2025. </li>
-		<li>[10/2024] Two papers are accepted by the IEEE BigData 2024. </li>
+		<li>[10/2024] Three papers are accepted by the IEEE BigData 2024. </li>
 		<li>[10/2024] One paper is accepted by the Journal of Frontiers in Big Data. </li>
 		<li>[10/2024] I will serve as the Guest Editor for the Journal of Frontiers in Big Data, Frontiers Media SA </li>
 		<li>[10/2024] I will give a talk to AI TIME. </li>
