--- a/students.html
+++ b/students.html
@@ -75,7 +75,7 @@
                 I also welcome intern/graduate/undergraduate students who have solid machine learning backgrounds and aim for research publications.
                 <ul>
                     <li>Send your application to me (chen_zhao [at] baylor [dot] edu); </li>
-                    <li>Mail subject line as "[Prospective Student - Ph.D.] <em>Your Name</em>"; </li>
+                    <li>Mail subject line as "[Prospective Student - Intern] <em>Your Name</em>"; </li>
                     <li>Briefly mention your education background, GPA/Rank, and English test scores (especially speaking), if available; </li>
                     <li>Attach your curriculum vitae, transcripts, and English test scores, if available. </li>
                 </ul>
