--- a/publications.html
+++ b/publications.html
@@ -119,7 +119,7 @@
             <p><strong>Conference Papers</strong></p>
 
             <p style="text-align:justify;background-color:#dbd9db">
-                <strong>KDD</strong>(4), 
+                <strong>KDD</strong>(5), 
                 <strong>IJCAI</strong>(2), 
                 <strong>AAAI</strong>(2),
                 <strong>CVPR</strong>(1), 
@@ -136,6 +136,11 @@
             </p>
             
                 <ol>
+                    <li>
+                        <strong>[KDD'25]</strong> MLDGG: Meta-Learning for Domain Generalization on Graphs. <br>
+                        Qin Tian, <strong>Chen Zhao</strong>, Minglai Shao, Wenjun Wang, Yujie Lin, Dong Li <br>
+                        <em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em>, 2025
+                    </li>
                     <li>
                         <strong>[AAAI'25]</strong> Multi-View Unsupervised Column Subset Selection via Combinatorial Search. <br>
                         Guihong Wan, Ninghui Hao, Crystal Maung, Haim Schweitzer, <strong>Chen Zhao</strong>, Kun-Hsing Yu, Yevgeniy Semenov <br>
