--- a/publications.html
+++ b/publications.html
@@ -138,7 +138,7 @@
                 <ol>
                     <li>
                         <strong>[KDD'25]</strong> MLDGG: Meta-Learning for Domain Generalization on Graphs. <br>
-                        Qin Tian, <strong>Chen Zhao</strong>, Minglai Shao, Wenjun Wang, Yujie Lin, Dong Li <br>
+                        <u>Qin Tian</u>, <strong>Chen Zhao</strong>, Minglai Shao, Wenjun Wang, Yujie Lin, Dong Li <br>
                         <em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em>, 2025
                     </li>
                     <li>
