--- a/services.html
+++ b/services.html
@@ -56,7 +56,8 @@
                         </ul>
                     <li>2024:
                         <ul>
-                            <li>[Organizer, Chair] <a href="https://sites.google.com/view/robustmlds24/home">The 1st Workshops on Robust Machine Learning for Distribution Shifts</a> (RobustMLDS @ IEEE BigData'24).</li>
+                            <li>[Session Chair] IEEE International Conference on Big Data (IEEE BigData'24).</li>
+			    <li>[Organizer, Chair] <a href="https://sites.google.com/view/robustmlds24/home">The 1st Workshops on Robust Machine Learning for Distribution Shifts</a> (RobustMLDS @ IEEE BigData'24).</li>
                             <li>[Organizer, Chair] <a href="https://sites.google.com/view/trustml4health24/">The 1st Workshops on Trustworthy Machine Learning for Healthcare</a> (TrustML4Health @ IEEE BigData'24).</li>
                             <li>[Organizer, Chair] <a href="https://ai-activities.github.io/EAI-workshop-24/">The 3rd Workshops on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'24).</li>
                             <li>[Organizer, Chair] <a href="https://ai-activities.github.io/UDM-workshop-24/">The 3rd Workshops on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ KDD'24).</li>
