--- a/services.html
+++ b/services.html
@@ -94,6 +94,7 @@
             <ul>
 		    <li>2025: 
 			<ul>
+				<li>International Joint Conference on Artificial Intelligence (IJCAI)</li>
 				<li>Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD)</li>
 				<li>International Conference on Artificial Intelligence and Statistics (AISTATS)</li>
 				<li>AAAI Conference on Artificial Intelligence (AAAI)</li>
