--- a/services.html
+++ b/services.html
@@ -173,6 +173,7 @@
 				<li>Journal of Frontiers in Big Data</li>
 				<li>Journal of Advances in Artificial Intelligence and Machine Learning</li>
 				<li>Journal of Open Innovation: Technology, Market, and Complexity</li>
+				<li>Journal of PeerJ Computer Science</li>
 			</ul>
 		    <li>2023:
 			<ul>
