--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[12/2024] Two papers are accepted by AAAI 2025. </li>
 		<li>[11/2024] I will serve as a PC member for IJCAI 2025. </li>
 		<li>[11/2024] One paper is accepted by KDD 2025 (research track). </li>
 		<li>[11/2024] One paper is accepted by the Journal of ACM Distributed Ledger Technologies: Research and Practice. </li>
-		<li>[10/2024] One paper is accepted by AAAI 2025 (student abstract). </li>
 		<li>[10/2024] I am invited to give a talk by the Department of Computer Science at Brigham Young University. </li>
 		<li>[10/2024] A tutorial is accepted by AAAI 2025. </li>
 		<li>[10/2024] Three papers are accepted by the IEEE BigData 2024. </li>
