--- a/publications.html
+++ b/publications.html
@@ -121,7 +121,7 @@
             <p style="text-align:justify;background-color:#dbd9db">
                 <strong>KDD</strong>(5), 
                 <strong>IJCAI</strong>(2), 
-                <strong>AAAI</strong>(2),
+                <strong>AAAI</strong>(3),
                 <strong>CVPR</strong>(1), 
                 <strong>WWW</strong>(1), 
                 <strong>CIKM</strong>(3), 
@@ -136,15 +136,21 @@
             </p>
             
                 <ol>
+
                     <li>
-                        <strong>[KDD'25]</strong> MLDGG: Meta-Learning for Domain Generalization on Graphs. <br>
-                        <u>Qin Tian</u>, <strong>Chen Zhao</strong>, Minglai Shao, Wenjun Wang, Yujie Lin, Dong Li <br>
-                        <em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em>, 2025
+                        <strong>[AAAI'25]</strong> Metric-Agnostic Continual Learning for Sustainable Group Fairness. <br>
+                        Heng Lian, <strong>Chen Zhao</strong>, Zhong Chen, Xingquan Zhu, My T. Thai, Yi He <br>
+                        <em>In Proceedings of the AAAI Conference on Artificial Intelligence</em>, 2025
                     </li>
                     <li>
                         <strong>[AAAI'25]</strong> Multi-View Unsupervised Column Subset Selection via Combinatorial Search. <br>
                         Guihong Wan, Ninghui Hao, Crystal Maung, Haim Schweitzer, <strong>Chen Zhao</strong>, Kun-Hsing Yu, Yevgeniy Semenov <br>
                         <em>In Proceedings of the AAAI Conference on Artificial Intelligence</em>, 2025
+                    </li>
+                    <li>
+                        <strong>[KDD'25]</strong> MLDGG: Meta-Learning for Domain Generalization on Graphs. <br>
+                        <u>Qin Tian</u>, <strong>Chen Zhao</strong>, Minglai Shao, Wenjun Wang, Yujie Lin, Dong Li <br>
+                        <em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em>, 2025
                     </li>
                     <li>
                         <strong>[BigData'24]</strong> Feature-Space Semantic Invariance: Enhanced OOD Detection for Open-Set Domain Generalization. <br>
