--- a/talks.html
+++ b/talks.html
@@ -54,11 +54,11 @@
                     <ul>
                         <li>
                             <strong>Chen Zhao</strong>, Xintao Wu.<br>
-                            The Annual AAAI Conference on Artificial Intelligence (AAAI'25), Philadelphia, PA, USA, 2025.
+                            The Annual AAAI Conference on Artificial Intelligence (AAAI'25), Philadelphia, PA, USA, February 25th, 2025.
                         </li>
                         <li>
                             <strong>Chen Zhao</strong>, Xintao Wu.<br>
-                            IEEE International Conference on Big Data (BigData'24), Washington D.C., USA, 2024.
+                            IEEE International Conference on Big Data (BigData'24), Washington D.C., USA, December 15th, 2024.
                         </li>
                     </ul>
                 </li>
