--- a/services.html
+++ b/services.html
@@ -227,6 +227,7 @@
 	    <p><strong>University and Department Services </strong></p>
 	    <ul>
 		    <li>Judge for the Outstanding Graduate Student Research Award, Baylor University, 2023 - 2024 </li>
+		    <li>Outreach, Inclusion and Belonging Committee Member, School of Engineering and Computer Science, Baylor University, since 2024</li>
 		    <li>Engagement Committee, Department of Computer Science, Baylor University, since 2023 </li>
 			    <ul>
 				  <li>Engagement Committee Chair, since 2024</li>  
