--- a/talks.html
+++ b/talks.html
@@ -55,10 +55,13 @@
                         <li>
                             <strong>Chen Zhao</strong>, Xintao Wu.<br>
                             The Annual AAAI Conference on Artificial Intelligence (AAAI'25), Philadelphia, PA, USA, February 25th, 2025.
+                            [<a href="https://sites.google.com/view/aaai25-tutorial-algor-fair/home">Website</a>]
                         </li>
                         <li>
                             <strong>Chen Zhao</strong>, Xintao Wu.<br>
-                            IEEE International Conference on Big Data (BigData'24), Washington D.C., USA, December 15th, 2024.
+                            IEEE International Conference on Big Data (BigData'24), Washington D.C., USA, December 15th, 2024. 
+                            [<a href="https://sites.google.com/view/bigdata24-tutorial-algor-fair/home">Website</a>]
+                            [<a href="https://drive.google.com/file/d/1SuQDdocARVDFmE0MMjkR50XTis56mn37/view?usp=drive_link">Slides</a>]
                         </li>
                     </ul>
                 </li>
