--- a/services.html
+++ b/services.html
@@ -62,7 +62,8 @@
                             <li>[Organizer, Chair] <a href="https://ai-activities.github.io/EAI-workshop-24/">The 3rd Workshops on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'24).</li>
                             <li>[Organizer, Chair] <a href="https://ai-activities.github.io/UDM-workshop-24/">The 3rd Workshops on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ KDD'24).</li>
                             <li>[Co-Chair] <a href="https://www3.cs.stonybrook.edu/~ieeebigdata2024/CommitteeMember.html#:~:text=Big%20Data%20Cup%20Challenges%20Co%2DChairs">Big Data Cup Challenges</a> (IEEE BigData'24).</li>
-                            <li>[Organizer] <a href="https://www.ecs.baylor.edu/get-involved/southwest-data-science-conference-2024-baylor-university">The Southwest Data Science Conference</a>.</li>
+                            <li>[Best Poster Award Committee] Ph.D. Forum (IEEE BigData'24).</li>
+			    <li>[Organizer] <a href="https://www.ecs.baylor.edu/get-involved/southwest-data-science-conference-2024-baylor-university">The Southwest Data Science Conference</a>.</li>
                         </ul>
                     <li>2023:
                         <ul>
