--- a/services.html
+++ b/services.html
@@ -95,6 +95,7 @@
             <ul>
 		    <li>2025: 
 			<ul>
+				<li>International Joint Conference on Neural Networks (IJCNN)</li>
 				<li>International Conference on Machine Learning (ICML)</li>
 				<li>International Joint Conference on Artificial Intelligence (IJCAI)</li> 
 				<li>Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD)</li>
