--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[12/2024] I will serve as a reviewer for ECML PKDD 2025. </li>
 		<li>[12/2024] I will serve as a reviewer for IJCNN 2025. </li>
 		<li>[12/2024] I will serve as a reviewer for ICML 2025. </li>
 		<li>[12/2024] Two papers are accepted by AAAI 2025. </li>
