--- a/publications.html
+++ b/publications.html
@@ -125,6 +125,7 @@
                 <strong>CVPR</strong>(1), 
                 <strong>WWW</strong>(1), 
                 <strong>CIKM</strong>(3), 
+                <strong>SDM</strong>(1),
                 <strong>ICDM</strong>(2), 
                 <strong>ECAI</strong>(1), 
                 <strong>ICASSP</strong>(1), 
@@ -137,6 +138,12 @@
             
                 <ol>
 
+
+                    <li>
+                        <strong>[SDM'25]</strong> Evidence-Based Out-of-Distribution Detection on Multi-Label Graphs. <br>
+                        Ruomeng Ding, Xujiang Zhao, <strong>Chen Zhao</strong>, Minglai Shao, Zhengzhang Chen, Haifeng Chen. <br>
+                        <em>In Proceedings of SIAM International Conference on Data Mining</em>, 2025
+                    </li>
                     <li>
                         <strong>[AAAI'25]</strong> Metric-Agnostic Continual Learning for Sustainable Group Fairness. <br>
                         Heng Lian, <strong>Chen Zhao</strong>, Zhong Chen, Xingquan Zhu, My T. Thai, Yi He <br>
