--- a/publications.html
+++ b/publications.html
@@ -142,7 +142,7 @@
                     <li>
                         <strong>[SDM'25]</strong> Evidence-Based Out-of-Distribution Detection on Multi-Label Graphs. <br>
                         Ruomeng Ding, Xujiang Zhao, <strong>Chen Zhao</strong>, Minglai Shao, Zhengzhang Chen, Haifeng Chen <br>
-                        <em>In Proceedings of SIAM International Conference on Data Mining</em>, 2025
+                        <em>In Proceedings of the SIAM International Conference on Data Mining</em>, 2025
                     </li>
                     <li>
                         <strong>[AAAI'25]</strong> Metric-Agnostic Continual Learning for Sustainable Group Fairness. <br>
