--- a/publications.html
+++ b/publications.html
@@ -59,11 +59,6 @@
                         <em>ArXiv preprint, 2411.02671</em>
                     </li>
                     <li>
-                        GDDA: Semantic OOD Detection on Graphs under Covariate Shift via Score-Based Diffusion Models. <br>
-                        <u>Zhixia He</u>, <strong>Chen Zhao</strong>, Minglai Shao, Yujie Lin, Dong Li, Qin Tian. <br>
-                        <em>ArXiv preprint, 2410.17526</em>
-                    </li>
-                    <li>
                 		FADE: Towards Fairness-aware Augmentation for Domain Generalization via Classifier-Guided Score-based Diffusion Models. </br>
                 		<u>Yujie Lin</u>, <u>Dong Li</u>, <strong>Chen Zhao</strong>, Minglai Shao. <br/>
                 		<em>ArXiv preprint, 2406.09495</em>
@@ -128,7 +123,7 @@
                 <strong>SDM</strong>(1),
                 <strong>ICDM</strong>(2), 
                 <strong>ECAI</strong>(1), 
-                <strong>ICASSP</strong>(1), 
+                <strong>ICASSP</strong>(3), 
                 <strong>IEEE BigData</strong>(3), 
                 <strong>PAKDD</strong>(1), 
                 <strong>ICBC</strong>(1), 
@@ -137,8 +132,17 @@
             </p>
             
                 <ol>
-
-
+                    
+                    <li>
+                        <strong>[ICASSP'25]</strong> GDDA: Semantic OOD Detection on Graphs under Covariate Shift via Score-Based Diffusion Model. <br>
+                        <u>Zhixia He</u>, <strong>Chen Zhao</strong>, Minglai Shao, <u>Yujie Lin</u>, <u>Dong Li</u>, <u>Qin Tian</u> <br>
+                        <em>In Proceedings of the IEEE International Conference on Acoustics, Speech and Signal Processing</em>, 2025
+                    </li>
+                    <li>
+                        <strong>[ICASSP'25]</strong> Hypergraph-Based Dynamic Graph Node Classification. <br>
+                        <u>Xiaoxu Ma</u>, <strong>Chen Zhao</strong>, Minglai Shao, <u>Yujie Lin</u> <br>
+                        <em>In Proceedings of the IEEE International Conference on Acoustics, Speech and Signal Processing</em>, 2025
+                    </li>
                     <li>
                         <strong>[SDM'25]</strong> Evidence-Based Out-of-Distribution Detection on Multi-Label Graphs. <br>
                         Ruomeng Ding, Xujiang Zhao, <strong>Chen Zhao</strong>, Minglai Shao, Zhengzhang Chen, Haifeng Chen <br>
