--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
-		<li>[12/2024] Two papers are accepted by ICASSP 2025. </li>
-		<li>[12/2024] One paper is accepted by SDM 2025. </li>
+		<li>[01/2025] I will serve as a reviewer for the journal of Pattern Recognition. </li>
+<!-- 		<li>[12/2024] One paper is accepted by SDM 2025. </li>
 		<li>[12/2024] I will serve as a reviewer for ECML PKDD 2025. </li>
 		<li>[12/2024] I will serve as a reviewer for IJCNN 2025. </li>
 		<li>[12/2024] I will serve as a reviewer for ICML 2025. </li>
@@ -150,7 +150,7 @@
 		<li>[02/2024] I will serve as a PC member for IEEE Bigdata 2024. </li>
 		<li>[02/2024] Our new survey paper (Fairness in Distribution Shifts) is now available on ArXiv. </li>
 		<li>[01/2024] I will serve as a PC member for ACM SIGKDD 2024. </li>
-		<li>[01/2024] I will serve as a panelist for an NSF panel. </li>
+		<li>[01/2024] I will serve as a panelist for an NSF panel. </li> -->
 	    </ul>
 	    
 	<div class="my-4 text-left">
