--- a/services.html
+++ b/services.html
@@ -171,6 +171,10 @@
 
             <p><strong>Journal Reviewer </strong></p>
             <ul>
+		    <li>2025:
+			<ul>
+				<li>Pattern Recognition</li>
+			</ul>
 		    <li>2024:
 			<ul>
 				<li>ACM Transactions on Knowledge Discovery from Data (TKDD)</li>
