--- a/talks.html
+++ b/talks.html
@@ -53,7 +53,7 @@
                     Supervised Algorithmic Fairness in Distribution Shifts. 
                     <ul>
                         <li>
-                            <strong>Chen Zhao</strong>, Xintao Wu.<br>
+                            Dong Li, <strong>Chen Zhao</strong>, Xintao Wu.<br>
                             The Annual AAAI Conference on Artificial Intelligence (AAAI'25), Philadelphia, PA, USA, February 25th, 2025.
                             [<a href="https://sites.google.com/view/aaai25-tutorial-algor-fair/home">Website</a>]
                         </li>
