--- a/services.html
+++ b/services.html
@@ -173,6 +173,7 @@
             <ul>
 		    <li>2025:
 			<ul>
+				<li>ACM Transactions on Knowledge Discovery from Data (TKDD)</li>
 				<li>Pattern Recognition</li>
 			</ul>
 		    <li>2024:
