--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[01/2025] I will serve as a reviewer for TKDD. </li>
 		<li>[01/2025] I will serve as a reviewer for the journal of Pattern Recognition. </li>
 <!-- 		<li>[12/2024] One paper is accepted by SDM 2025. </li>
 		<li>[12/2024] I will serve as a reviewer for ECML PKDD 2025. </li>
