--- a/services.html
+++ b/services.html
@@ -104,7 +104,7 @@
 				<li>AAAI Conference on Artificial Intelligence (AAAI)</li>
 				<li>IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</li>
 				<li>International Conference on Learning Representations (ICLR)</li>
-				<li>ACM Conference on Knowledge Discovery and Data Mining (KDD, research track)</li>
+				<li>ACM Conference on Knowledge Discovery and Data Mining (KDD, research track, August and February cycles)</li>
 			</ul>
 		    <li>2024:
 			<ul>
