--- a/services.html
+++ b/services.html
@@ -52,7 +52,8 @@
             <ul>
                     <li>2025:
                         <ul>
-                            <li>[Tutorial Co-Chair] <a href="https://www.pakdd2025.org/organization/#:~:text=de%20Madrid%2C%20Spain-,Tutorial%20Chairs,-Chen%20Zhao%2C%20Baylor"> The Pacific-Asia Conference on Knowledge Discovery and Data Mining</a> (PAKDD'25).</li>
+			    <li>[Tutorial Chair] <a href="https://www3.cs.stonybrook.edu/~icdm2025/organizingcommittee.html#:~:text=Stony%20Brook%20University-,Tutorial%20Chairs,-Chen%20Zhao"> The IEEE International Conference on Data Mining</a> (ICDM'25).</li>
+                            <li>[Tutorial Chair] <a href="https://www.pakdd2025.org/organization/#:~:text=de%20Madrid%2C%20Spain-,Tutorial%20Chairs,-Chen%20Zhao%2C%20Baylor"> The Pacific-Asia Conference on Knowledge Discovery and Data Mining</a> (PAKDD'25).</li>
                         </ul>
                     <li>2024:
                         <ul>
