--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[01/2025] One tutorial is accepted by SDM 2025. </li>
 		<li>[01/2025] I will serve as the Tutorial Chair for ICDM 2025. </li>
 		<li>[01/2025] I will serve as a reviewer for KDD 2025 (February cycle). </li>
 		<li>[01/2025] I will serve as a reviewer for TKDD. </li>
