--- a/talks.html
+++ b/talks.html
@@ -54,6 +54,11 @@
                     <ul>
                         <li>
                             Dong Li, <strong>Chen Zhao</strong>, Xintao Wu.<br>
+                            SIAM International Conference on Data Mining (SDM), Alexandria, Virginia, USA, May 1st, 2025.
+<!--                             [<a href="https://sites.google.com/view/aaai25-tutorial-algor-fair/home">Website</a>] -->
+                        </li>
+                        <li>
+                            Dong Li, <strong>Chen Zhao</strong>, Xintao Wu.<br>
                             The Annual AAAI Conference on Artificial Intelligence (AAAI'25), Philadelphia, PA, USA, February 25th, 2025.
                             [<a href="https://sites.google.com/view/aaai25-tutorial-algor-fair/home">Website</a>]
                         </li>
