--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 	<strong>Call for papers</strong>: Frontiers in Big Data, Frontiers Media SA, Special Issue: <a href="https://www.frontiersin.org/research-topics/68107/ethical-artificial-intelligence-methods-and-applications">Ethical Artificial Intelligence: Methods and Applications</a>. 
 	<br>
 	<strong>Call for papers</strong>: Mathematics, MDPI, Special Issue: <a href="https://www.mdpi.com/journal/mathematics/special_issues/2496644R7D">Advances in Trustworthy and Robust Artificial Intelligence</a>. 
-<!-- 	<br>
-	<strong>Call for papers</strong>: <a href="https://sites.google.com/view/robustmlds24/home">The 1st Workshop on Robust Machine Learning for Distribution Shifts (RobustMLDS @ IEEE BigData 2024)</a>.
 	<br>
+	<strong>Call for papers</strong>: <a href="https://sites.google.com/view/arrml-25/home">The 2nd Workshop on Advances in Robust and Reliable Machine Learning (ARRML @ SDM 2025)</a>.
+<!-- 	<br>
 	<strong>Call for papers</strong>: <a href="https://sites.google.com/view/trustml4health24/">The 1st Workshop on Trustworthy Machine Learning for Healthcare (TrustML4Health @ IEEE BigData 2024)</a>. -->
 	</p>
 
