--- a/publications.html
+++ b/publications.html
@@ -128,11 +128,17 @@
                 <strong>PAKDD</strong>(1), 
                 <strong>ICBC</strong>(1), 
                 <strong>ICKG</strong>(2), 
-                <strong>IGARSS</strong>(1)
+                <strong>IGARSS</strong>(1),
+                <strong>DASFAA</strong>(1)
             </p>
             
                 <ol>
-                    
+
+                    <li>
+                        <strong>[DASFAA'25]</strong> Less is More: Efficient Weight “Farcasting” with 1-Layer Neural Network. <br>
+                        Xiao Shou, Debarun Bhattacharjya, Yanna Ding, <strong>Chen Zhao</strong>, Rui Li, Jianxi Gao <br>
+                        <em>In Proceedings of International Conference on Database Systems for Advanced Applications</em>, 2025
+                    </li>
                     <li>
                         <strong>[ICASSP'25]</strong> GDDA: Semantic OOD Detection on Graphs under Covariate Shift via Score-Based Diffusion Model. <br>
                         <u>Zhixia He</u>, <strong>Chen Zhao</strong>, Minglai Shao, <u>Yujie Lin</u>, <u>Dong Li</u>, <u>Qin Tian</u> <br>
