--- a/publications.html
+++ b/publications.html
@@ -53,6 +53,12 @@
 <!-- --------------------------------------------------------------------------------------------------------------------- -->
             <p><strong>Preprints</strong></p>
                 <ol>
+                    
+                    <li>
+                        A Survey on Computational Pathology Foundation Models: Datasets, Adaptation Strategies, and Evaluation Tasks. <br>
+                        <u>Dong Li</u><sup>*</sup>, Guihong Wan<sup>*</sup>, Xintao Wu, Xinyu Wu, Ajit J. Nirmal, Christine G. Lian, Peter K. Sorger, Yevgeniy R. Semenov, <strong>Chen Zhao</strong>. <br>
+                        <em>ArXiv preprint, 6157834</em>
+                    </li>
                     <li>
                         Fair In-Context Learning via Latent Concept Variables. <br>
                         Karuna Bhaila, Minh-Hao Van, Kennedy Edemacu, <strong>Chen Zhao</strong>, Feng Chen, Xintao Wu. <br>
