--- a/publications.html
+++ b/publications.html
@@ -66,7 +66,7 @@
                     </li>
                     <li>
                 		FADE: Towards Fairness-aware Augmentation for Domain Generalization via Classifier-Guided Score-based Diffusion Models. </br>
-                		<u>Yujie Lin</u>, <u>Dong Li</u>, <strong>Chen Zhao</strong>, Minglai Shao. <br/>
+                		<u>Yujie Lin</u><sup>*</sup>, <u>Dong Li</u><sup>*</sup>, <strong>Chen Zhao</strong>, Minglai Shao. <br/>
                 		<em>ArXiv preprint, 2406.09495</em>
                 	</li>
                     <li>
