--- a/talks.html
+++ b/talks.html
@@ -76,6 +76,13 @@
 
             <p><strong>Invited Talks</strong></p>
             <ul>
+                
+                <li>Acquiring and Structuring Scientific Knowledge in AI Research.
+                    <ul>
+                        <li>AAAI Bridge on Artificial Intelligence for Scholarly Communication (February 25th-26th, 2025, Philadelphia, PA, USA, Host: Azanzi Jiomekong and Sören Auer)</li>
+                    </ul>
+                </li>
+                
                 <li>Advances in Fairness and Robustness in Machine Learning Under Distribution Shifts.
                     <ul>
                         <li>Department of Computer Science, Brigham Young University (February 2025, Provo, UT, USA, Host: Porter Jenkins)</li>
