--- a/students.html
+++ b/students.html
@@ -94,7 +94,7 @@
                     <div class="image-wrapper" style="text-align: center">
                         <img src="./files/student_imgs/dong_li_1.jpg" alt="Dong Li" width="200" height="200"> 
                         <p>
-                            <a href="https://charliezhaoyinpeng.github.io/homepage/students.html">Dong Li</a> <br>
+                            <a href="https://turkeywatanabe.github.io/dongli/">Dong Li</a> <br>
                             Ph.D. Student (2025 Spring- )
                         </p>
                     </div>
