--- a/publications.html
+++ b/publications.html
@@ -57,7 +57,7 @@
                     <li>
                         A Survey on Computational Pathology Foundation Models: Datasets, Adaptation Strategies, and Evaluation Tasks. <br>
                         <u>Dong Li</u><sup>*</sup>, Guihong Wan<sup>*</sup>, Xintao Wu, Xinyu Wu, Ajit J. Nirmal, Christine G. Lian, Peter K. Sorger, Yevgeniy R. Semenov, <strong>Chen Zhao</strong>. <br>
-                        <em>ArXiv preprint, 6157834</em>
+                        <em>ArXiv preprint, 2501.15724</em>
                     </li>
                     <li>
                         Fair In-Context Learning via Latent Concept Variables. <br>
