--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[01/2025] Our survey on Computational Pathology Foundation Models is available online (arXiv preprint, 2501.15724). </li>
 		<li>[01/2025] I am invited to give a talk at the AAAI 2025 Bridge. </li>
 		<li>[01/2025] One paper is accepted by DASFAA 2025. </li>
 		<li>[01/2025] One workshop ARRML'25 is accepted by SDM 2025. </li>
