--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 			<li>Uncertainty Quantification;</li>
 			<li>Distribution Shift and Domain Generalization;</li>
 			<li>Graph Learning;</li>
+			<li>Computational Biology;</li>
 			<li>Causal Learning and Structural Causal Mechanisms.</li>
 	    	</ul>
         </div>
